--- a/index.html
+++ b/index.html
@@ -2,12 +2,72 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Shamilfrontend - Movie card</title>
+    <title>Shamilfrontend - Movie card interstellar</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
 
-
+<div class="wrapper">
+    <audio controls>
+        <source src="./music/interstellar_zack_hemsey_-the_way.mp3" type="audio/mp3">
+    </audio>
+    <div class="card">
+        <div class="poster">
+            <img class="poster__img" src="./img/card-image.jpg" alt="card">
+            <div class="details">
+                <h2 class="details__title">Interstellar (2014)</h2>
+                <p class="directed">Directed by Christopher Nolan</p>
+                <div class="rating">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                    <span class="rating__int">9/10</span>
+                </div>
+                <ul class="tags">
+                    <li class="tags__item">фантастика</li>
+                    <li class="tags__item">драма</li>
+                </ul>
+                <div class="info">
+                    <p class="info__description">
+                        Когда засуха приводит человечество к продовольственному кризису, коллектив исследователей и
+                        учёных отправляется сквозь червоточину (которая предположительно соединяет области
+                        пространства-времени через большое расстояние) в путешествие, чтобы превзойти прежние
+                        ограничения для космических путешествий человека и переселить человечество на другую планету.
+                    </p>
+                </div>
+                <div class="star">
+                    <h4 class="star__title">Cast</h4>
+                    <ul class="star__list">
+                        <li class="star__item">
+                            <img class="star__img" src="./img/cast1.jpg" alt="">
+                        </li>
+                        <li class="star__item">
+                            <img class="star__img" src="./img/cast2.jpg" alt="">
+                        </li>
+                        <li class="star__item">
+                            <img class="star__img" src="./img/cast3.jpg" alt="">
+                        </li>
+                        <li class="star__item">
+                            <img class="star__img" src="./img/cast4.jpg" alt="">
+                        </li>
+                        <li class="star__item">
+                            <img class="star__img" src="./img/cast5.jpg" alt="">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
