--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="wrapper">
-    <audio controls autoplay id="myAudio">
+    <audio controls autoplay id="myAudio" loop>
         <source src="./music/interstellar_zack_hemsey_-the_way.mp3" type="audio/mp3">
     </audio>
     <div class="card">
